NetBSD Problem Report #43186

From www@NetBSD.org  Wed Apr 21 05:49:59 2010
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id AE5C163C55F
	for <gnats-bugs@gnats.NetBSD.org>; Wed, 21 Apr 2010 05:49:59 +0000 (UTC)
Message-Id: <20100421054959.7FBA363C55E@www.NetBSD.org>
Date: Wed, 21 Apr 2010 05:49:59 +0000 (UTC)
From: kimoto@soum.co.jp
Reply-To: kimoto@soum.co.jp
To: gnats-bugs@NetBSD.org
Subject: multicast packets aren't received when PROMISC mode on fxp.
X-Send-Pr-Version: www-1.0

>Number:         43186
>Category:       kern
>Synopsis:       multicast packets aren't received when PROMISC mode on fxp.
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Apr 21 05:50:00 +0000 2010
>Closed-Date:    Sun May 01 02:41:05 +0000 2011
>Last-Modified:  Sun May 01 02:41:05 +0000 2011
>Originator:     Masahiko KIMOTO
>Release:        5.99.27
>Organization:
SOUM Corporation
>Environment:
NetBSD gaia.earthlight.jp 5.99.27 NetBSD 5.99.27 (GENERIC) #3: Thu Apr 15 21:39:38 JST 2010  kimoto@gaia.earthlight.jp:/local/home/kimoto/work/source/netbsd/build/obj/sys/arch/i386/compile/GENERIC i386

>Description:
When I set promiscus mode on fxp interface, multicast packets
which the host doesn't joined address are not received.
>How-To-Repeat:
set promiscus flag on fxp. tcpdump on the interface and send
multicast packets to not-joined address. they does note been 
observed.
>Fix:
Intel NIC has two flags for promiscus mode, one for unicast and another is for multicast.
When the user set promiscus mode flag on the interface, both flags should be set.
However current code (including -current) set only unicast promiscus flag.
fxp.c on OpenBSD fixed this problem. Please refer and import it.

>Release-Note:

>Audit-Trail:
From: "Jonathan A. Kollasch" <jakllsch@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/43186 CVS commit: src/sys/dev/ic
Date: Wed, 30 Mar 2011 17:52:45 +0000

 Module Name:	src
 Committed By:	jakllsch
 Date:		Wed Mar 30 17:52:45 UTC 2011

 Modified Files:
 	src/sys/dev/ic: i82557.c

 Log Message:
 IFF_PROMISC implys IFF_ALLMULTI.
 Should fix PR#43186.


 To generate a diff of this commit:
 cvs rdiff -u -r1.136 -r1.137 src/sys/dev/ic/i82557.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->feedback
State-Changed-By: jakllsch@NetBSD.org
State-Changed-When: Thu, 31 Mar 2011 01:45:59 +0000
State-Changed-Why:
fix works for me.  does it work satisfactorily for you?


From: Masahiko KIMOTO <kimoto@soum.co.jp>
To: gnats-bugs@NetBSD.org, jakllsch@NetBSD.org
Cc: kern-bug-people@NetBSD.org, gnats-admin@NetBSD.org, netbsd-bugs@NetBSD.org,
        yuichiro@soum.co.jp
Subject: Re: PR/43186 CVS commit: src/sys/dev/ic
Date: Sat, 09 Apr 2011 22:13:59 +0900 (JST)

 Sorry for late response.

 I've confirmed. (actually by my subordinate :)

 Commited patch corrects the problem on fxp I've reported.

 Thanks!

 From: "Jonathan A. Kollasch" <jakllsch@NetBSD.org>
 Subject: PR/43186 CVS commit: src/sys/dev/ic
 Date: Wed, 30 Mar 2011 17:55:02 +0000 (UTC)

 > The following reply was made to PR kern/43186; it has been noted by GNATS.
 > 
 > From: "Jonathan A. Kollasch" <jakllsch@netbsd.org>
 > To: gnats-bugs@gnats.NetBSD.org
 > Cc: 
 > Subject: PR/43186 CVS commit: src/sys/dev/ic
 > Date: Wed, 30 Mar 2011 17:52:45 +0000
 > 
 >  Module Name:	src
 >  Committed By:	jakllsch
 >  Date:		Wed Mar 30 17:52:45 UTC 2011
 >  
 >  Modified Files:
 >  	src/sys/dev/ic: i82557.c
 >  
 >  Log Message:
 >  IFF_PROMISC implys IFF_ALLMULTI.
 >  Should fix PR#43186.
 >  
 >  
 >  To generate a diff of this commit:
 >  cvs rdiff -u -r1.136 -r1.137 src/sys/dev/ic/i82557.c
 >  
 >  Please note that diffs are not public domain; they are subject to the
 >  copyright notices on the relevant files.
 >  

 ----
 Masahiko KIMOTO, Ph.D.  / SOUM Corporation.
 e-mail: kimoto@soum.co.jp  phone:+81.3.5453.1251

State-Changed-From-To: feedback->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Sun, 01 May 2011 02:41:05 +0000
State-Changed-Why:
Confirmed fixed - thanks for checking.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.