IFF_PROMISC implys IFF_ALLMULTI. Should fix PR#43186.